--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "license": "",
   "engines": {
     "node": ">=9.2.0",
-    "npm": ">=5.6.0",
+    "npm": ">=5.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
